2003-10-14  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Cleaned-up Serbian translation.

2003-10-10  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation by
	Elian Myftiu  <elian@lycos.com>.

2003-10-09  Christian Rose  <menthos@menthos.com>

	* sv.po: Fixed one more embarassing typo.

2003-10-07  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-07  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2003-10-04  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2003-10-04  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Fixed Czech translation.

2003-10-03  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2003-09-30  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-09-29  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* pt_BR.po: Applied revision by Augusta Marques da Silva
	<augusta.marques@gmx.net>.

2003-09-23  Christian Rose  <menthos@menthos.com>

	* sv.po: Fixed some embarassing typos.

2003-09-19  Tõivo Leedjärv  <toivo@linux.ee>

	* et.po: Updated Estonian translation.

2003-09-17  Gediminas Paulauskas  <menesis@delfi.lt>

	* lt.po: Updated Lithuanian translation by Zygimantas Berucka.

2003-09-08  Mugurel Tudor  <mugurelu@go.ro>

	* ro.po: Updated Romanian translation by
		Misu Moldovan  <dumol@go.ro>

2003-09-07  Gustavo Noronha Silva  <kov@debian.org>

	* pt_BR.po: updated translation.

2003-09-06  Nikos Charonitakis <frolix68@yahoo.gr>

	* el.po: Review of Greek translation.

2003-09-05  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2002-09-05  Hasbullah Bin Pit <sebol@ikhlas.com>

        * ms.po: Updated Malay translation.

2003-09-05  Guntupalli Karunakar  <karunakar@freedomink.org>

	* hi.po: Updated Hindi translation.

2003-09-05  Taneem Ahmed  <taneem@bengalinux.org>

	* bn.po: Updated Bangla (Bengali) translation.
