@@ -16,8 +16,8 @@ capplets/common/capplet-util.c
 capplets/common/file-transfer-dialog.c
 capplets/common/gconf-property-editor.c
 capplets/default-applications/default-applications.desktop.in
-capplets/default-applications/gnome-default-applications-properties.c
 capplets/default-applications/gnome-default-applications-properties-structs.c
+capplets/default-applications/gnome-default-applications-properties.c
 capplets/default-applications/gnome-default-applications-properties.glade
 capplets/desktop-links/Accessibility.directory.in.in
 capplets/desktop-links/Advanced.directory.in.in
@@ -48,6 +48,7 @@ capplets/file-types/service-edit-dialog.c
 capplets/file-types/service-info.c
 capplets/font/font-properties.desktop.in
 capplets/font/font-properties.glade
+capplets/font/main.c
 capplets/keybindings/eggcellrendererkeys.c
 capplets/keybindings/gnome-keybinding-properties.c
 capplets/keybindings/gnome-keybinding-properties.glade
@@ -111,8 +112,8 @@ vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/fontilus-context-menu.c
 vfs-methods/fontilus/fontilus.schemas.in
 vfs-methods/fontilus/fontilus.server.in.in
-vfs-methods/themus/apply-font.glade
 vfs-methods/themus/Themus_Properties_View.server.in.in
+vfs-methods/themus/apply-font.glade
 vfs-methods/themus/theme-method.c
 vfs-methods/themus/theme-method.directory.in
 vfs-methods/themus/themus-properties-main.c
