@@ -1,3 +1,8 @@
+2003-10-19  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Sorted and added missing file.
+	* sv.po: Updated Swedish translation.
+
 2003-10-14  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Cleaned-up Serbian translation.
